--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "analyze": "cross-env RUN_ENV=analyze npm run build",
     "svgo": "svgo --config .svgo.yml src/resources/svg",
     "dev": "webpack-util develop",
-    "build": "webpack-util build"
+    "build": "webpack-util build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "engines": {
     "node": ">=8"
@@ -23,6 +25,7 @@
   },
   "devDependencies": {
     "@babel/preset-react": "^7.0.0",
+    "gh-pages": "^2.0.1",
     "husky": "^1.3.1",
     "svgo": "^1.1.1",
     "webpack-util": "^0.1.23"
