--- a/package.json
+++ b/package.json
@@ -3,37 +3,29 @@
   "version": "0.0.0",
   "private": true,
   "description": "",
-  "author": "",
+  "author": "Gerald <gera2ld@live.com>",
   "license": "ISC",
   "scripts": {
+    "postinstall": "husky install",
     "prebuild": "npm run lint",
     "lint": "eslint --ext .js,.vue .",
-    "analyze": "cross-env RUN_ENV=analyze npm run build",
-    "svgo": "svgo --config .svgo.yml src/resources/svg",
-    "dev": "webpack-util develop",
-    "build": "webpack-util build",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "analyze": "plaid analyze",
+    "dev": "plaid develop",
+    "build": "plaid build"
   },
   "engines": {
-    "node": ">=8"
-  },
-  "husky": {
-    "hooks": {
-      "pre-push": "npm run lint"
-    }
+    "node": ">=12"
   },
   "devDependencies": {
-    "@babel/preset-react": "^7.0.0",
-    "gh-pages": "^2.0.1",
-    "husky": "^1.3.1",
-    "svgo": "^1.1.1",
-    "webpack-util": "^0.2.0"
+    "@gera2ld/plaid": "~2.2.1",
+    "@gera2ld/plaid-common-react": "~2.2.0",
+    "@gera2ld/plaid-webpack": "~2.2.0",
+    "husky": "^5.1.1"
   },
   "dependencies": {
-    "@babel/runtime": "^7.2.0",
-    "@gera2ld/jsx-dom": "^0.1.1",
+    "@babel/runtime": "^7.13.4",
+    "@gera2ld/jsx-dom": "^1.2.1",
     "@gera2ld/rem": "^0.1.2",
-    "core-js": "^2.6.2"
+    "core-js": "^3.9.0"
   }
 }
